# time-series-forecasting

./: README.md  pyproject.toml  test1.csv
data/: best_params.json
data/tests/: Daily__02162025.xlsx  Daily__02182025.xlsx  Daily__02202025.xlsx  Daily__02212025.xlsx  Daily__02232025.xlsx  Daily__02242025.xlsx
models/: history.pkl
src/: globals.py  visualization.ipynb
src/notebooks/: visualization.ipynb  workflow.ipynb
src/scripts/: find_best_params.py  predict.py  test_model_performance.py  train.py  train_model.py  trainer.py
src/utils/: load.py  performance.py  plots.py  processing.py
tests/: Daily__02172025.xlsx  Daily__02192025.xlsx  Daily__02222025.xlsx  bColumn_L_Signs_Symbols.xlsx  bColumn_N_Signs_Symbols.xlsx
