[project]
name = "timeseriesforecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
